tests/parser/snapshots/parser_tests__parser__declare_var__declares_bool.snap
---
source: tests/parser/declare_var.rs
expression: ast
---
Program {
    stmts: [
        DeclarVar {
            name: Ident {
                name: "x",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            type_: Some(
                TypeName {
                    name: "mnt",
                    type_: Mnt,
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
            ),
            value: Spanned {
                node: Mnt(
                    true,
                ),
                span: Span {
                    start: 10,
                    end: 12,
                },
            },
        },
    ],
}
