tests/parser/snapshots/parser_tests__parser__declare_var__declares_float.snap
---
source: tests/parser/declare_var.rs
expression: ast
---
Program {
    stmts: [
        DeclarVar {
            name: Ident {
                name: "x",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            type_: Some(
                TypeName {
                    name: "3xr",
                    type_: Exr,
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
            ),
            value: Spanned {
                node: Float(
                    10.5,
                ),
                span: Span {
                    start: 10,
                    end: 15,
                },
            },
        },
    ],
}
